[project]
name = "dqn-atari-games"
version = "0.1.0"
description = "Deep Q-Network training for Atari MsPacman with Gymnasium."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ale-py==0.8.1",
    "gymnasium[atari,accept-rom-license]==0.28.1",
    "huggingface-hub==0.11.1",
    "imageio==2.28.1",
    "imageio-ffmpeg==0.3.0",
    "moviepy==1.0.3",
    "numpy==1.21.6",
    "opencv-python-headless==4.7.0.72",
    "pygame==2.1.0",
    "setuptools==67.7.2",
    "stable-baselines3==2.0.0a1",
    "tensorboard==2.11.2",
    "torch==2.7.0+cu128 ; sys_platform == 'linux'",
    "torch==2.7.0 ; sys_platform != 'linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
