[project]
name = "dqn-atari-games"
version = "0.1.0"
description = "Deep Q-Network training for Atari MsPacman with Gymnasium."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = []

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
